Scaffolded Identity pages + replaced identityuser in these with my own ApplicationUser

--- a/IdentityTest/appsettings.json
+++ b/IdentityTest/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=laptopgwen;Database=IdentityTest;Trusted_Connection=True;"
+    "DefaultConnection": "Server=LAPTOPGWEN\\SQLEXPRESS;Database=IdentityTest;Trusted_Connection=True;",
+    "IdentityTestContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
