--- a/IdentityTest/appsettings.json
+++ b/IdentityTest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOPGWEN\\SQLEXPRESS;Database=IdentityTest;Trusted_Connection=True;",
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=IdentityTest;Trusted_Connection=True;",
     "IdentityTestContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
